changed basic contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
+        <!-- purecss.io -->
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
@@ -26,15 +29,15 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                {{ site.admin.name }}<br />
+                {{ site.admin.email }}<br />
+                Build: {{ site.time | date: "%b %d %y %I:%M:%S" }}
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="{{ site.github }}">{{ site.github }}</a><br />
+                <a href="#">facebook link here</a><br />
               </p>
             </div>
           </div>
