--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -31,6 +31,9 @@ textarea,
 a
   color: $link-color
 
+#layout
+  padding-left: 160px
+
 .content
   background-color: $background
   margin-left: auto
@@ -45,3 +48,13 @@ a
 
 .header h1
   margin: 0 auto
+
+#menu
+  left: 160px
+  margin-left: -160px
+  position: fixed
+  width: 160px
+  top: 0
+  bottom: 0
+  overflow-y: auto
+  overflow-x: none
