changed menu look

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -17,8 +17,10 @@
   %body
     #layout
       #menu
+        .logo
         .pure-menu.pure-menu-open
-          %a.pure-menu-heading{:href => "/"} CCOWMU
+          .heading
+            %a.pure-menu-heading{:href => "/"} WMU Computer Club
           %ul
             %li
               %a{:href => "#"} PLAN
