changed sidebar to use Ems

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -22,7 +22,7 @@ $maxwidth: 768px
 $break-large: 52em
 $menu-background: #191818
 $menu-color: #EEE
-$menu-width: 160px
+$menu-width: 10em
 
 html,
 button,
