Logo and Sidebar
Made the logo an svg for infinite scale and power

made the sidebar bigger

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -17,7 +17,8 @@
   %body
     #layout
       #menu
-        .logo
+        %a{:href => "/"}
+          .logo
         .pure-menu.pure-menu-open
           .heading
             %a.pure-menu-heading{:href => "/"} WMU Computer Club
