changed sidebar to be px instead of em

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -23,7 +23,7 @@ $maxwidth: 768px
 $break-large: 52em
 $menu-background: #191818
 $menu-color: #EEE
-$menu-width: 10em
+$menu-width: 225px
 $menu-font-size: 16pt
 
 html,
