made menu a partial and added plan page

--- a/_layouts/index.haml
+++ b/_layouts/index.haml
@@ -19,4 +19,7 @@
       = render :partial => "menu"
       .pure-g-r
         .pure-u-2-3.content
+          .header
+            %h1
+              {{ site.name }}
           {{ content }}
