--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -6,6 +6,8 @@
       %a.pure-menu-heading{:href => "/"} WMU Computer Club
     %ul
       %li
+        %a{:href => "/blog"} Blog
+      %li
         %a{:href => "/PLAN"} PLAN
       %li
         %a{:href => "#"} Contact
