--- a/blog/index.haml
+++ b/blog/index.haml
@@ -1,10 +1,9 @@
 ---
-layout: index
-title: CCoWMU
+layout: default
+title: Blog
 ---
 
 .home
-  %h1 Blog Posts
   %ul.posts
     {% for post in site.posts %}
     %li
