--- a/_layouts/index.haml
+++ b/_layouts/index.haml
@@ -1,19 +1,6 @@
 !!!
 %html
-  %head
-    %meta{:charset => "utf-8"}/
-    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
-    %title {{ page.title }}
-    %meta{:content => "width=device-width", :name => "viewport"}/
-    / purecss.io
-    %link{:href => "http://yui.yahooapis.com/pure/0.4.2/pure-min.css", :rel => "stylesheet"}/
-    / google webfont
-    %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "http://fonts.googleapis.com/css?family=Source+Sans+Pro", :rel => "stylesheet", :type => "text/css"}/
-    / font-awesome
-    %link{:href => "http://weloveiconfonts.com/api/?family=fontawesome", :rel => "stylesheet"}/
-    / Custom CSS
-    %link{:href => "/css/main.css", :rel => "stylesheet"}/
+  {% convert_include head.haml %}
   %body
     #layout
       {% convert_include menu.haml %}
