major layout changes

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -5,25 +5,29 @@ $green: #CBE86B
 $gblue: #1E0FBE
 $blue: #0266C8
 $cream: #F2E9E1
-$offwhite: #EFEFEF
+$offwhite: #EEE
 $offblack: #1C140D
 $grey: #DFDFDF
 
-/* color assignments */
-$link-color: $blue
-$background: $white
-
-/* fonts */
-$sans: 'Source Sans Pro'
-$opensans: 'Open Sans'
+/* kuler variables */
+$kdark: #403D33
+$kmed: #807966
+$klight: #CCC2A3
+$klred: #8C0000
+$kdred: #590000
 
 /* variables */
-$font: $opensans , sans-serif
+$link-color: $klred
+$background: $klight
+$font: 'Open Sans' , sans-serif
 $maxwidth: 768px
 $break-large: 52em
-$menu-background: #191818
-$menu-color: #EEE
-$menu-width: 225px
+
+/* menu */
+$menu-background: $kmed
+$menu-color: $offwhite
+$menu-border-color: $kdred
+$menu-width: 200px
 $menu-font-size: 16pt
 
 html,
@@ -34,6 +38,7 @@ textarea,
 .pure-g [class *= "pure-u"],
 .pure-g-r [class *= "pure-u"]
   font-family: $font
+  background-color: $background
 
 a
   color: $link-color
@@ -48,7 +53,6 @@ ul.posts
     padding-left: $menu-width
 
 .content
-  background-color: $background
   margin-left: auto
   margin-right: auto
   display: block
@@ -69,11 +73,11 @@ ul.posts
   width: $menu-width
   top: 0
   bottom: 0
-  overflow-y: auto
+  overflow-y: hidden
   overflow-x: hidden
   border-style: solid
   border-width: 1px
-  border-color: $grey
+  border-color: $menu-border-color
   font-size: $menu-font-size
   @media screen and (min-width: $break-large)
     left: $menu-width
@@ -81,11 +85,12 @@ ul.posts
 .pure-menu .pure-menu-heading
   margin-top: 0
   white-space: normal
+  border-bottom: 1px solid $menu-border-color
 
 .pure-menu.pure-menu-open
   border: none
   ul li
-    border-bottom: 1px solid #B7B7B7
+    border-bottom: 1px solid $menu-border-color
 
 #menu, #menu a
   background-color: $menu-background
@@ -95,6 +100,6 @@ ul.posts
   height: $menu-width
   background-color: $menu-background
   background-image: url('/images/seal-white.svg')
-  background-size: 90%
+  background-size: $menu-width * .9
   background-position: center
   background-repeat: no-repeat
