javascript and css responsive magic

--- a/_includes/head.haml
+++ b/_includes/head.haml
@@ -11,3 +11,5 @@
   %link{:href => "http://weloveiconfonts.com/api/?family=fontawesome", :rel => "stylesheet"}/
   / Custom CSS
   %link{:href => "/css/main.css", :rel => "stylesheet"}/
+  / menu js
+  %script{:src => "/scripts/menu.js"}
