--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -1,4 +1,9 @@
-#menu
+%header#mheader
+  #hamburger{:onclick => "makeMenuVisible()"}
+    %div
+    %div
+    %div
+%nav#menu
   %a{:href => "/"}
     .logo
   .pure-menu.pure-menu-open
@@ -11,3 +16,4 @@
         %a{:href => "/PLAN"} PLAN
       %li
         %a{:href => "#"} Contact
+
