--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -93,7 +93,7 @@ ul.posts
   font-size: $menu-font-size
   @media screen and (min-width: $break-small)
     left: $menu-width
-  @media screen and (max-width: $break-small)
+  @media screen and (max-width: $break-small - 1)
     //top: -1000px
     //bottom: 1000px
     display: none
