fixed resize again

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -92,7 +92,8 @@ ul.posts
   overflow-x: hidden
   font-size: $menu-font-size
   @media screen and (min-width: $break-small)
-    left: $menu-width
+    //left: $menu-width
+    position: fixed
   @media screen and (max-width: $break-small - 1)
     //top: -1000px
     //bottom: 1000px
